# Preprocessing_VNItext

./: README.md  pyproject.toml  setup.cfg  setup.py  version.txt
Dataset/noidung/: 1.txt  10021.txt  10022.txt  10075.txt  10098.txt  10099.txt  10101.txt  10121.txt  10142.txt  10166.txt  10169.txt  10242.thongbao.txt  10244.txt  10291.txt  10388.txt  10406.txt  10419.txt  10460.txt  10465.txt  10473.txt  10478.txt  10512.txt  10530.txt  10539.txt  10557.txt  10622.txt  10677.txt  10719.txt  10739.txt  10955.txt  10979.txt  11028.txt  11088.txt  11089.txt  11137.txt  11138.txt  11139.txt  11143.txt  11177.txt  11198.txt  (+4381 more)
Dataset/outputdataset/: result_1.txt  result_10021.txt  result_10022.txt  result_10075.txt  result_10098.txt  result_10099.txt  result_10101.txt  result_10121.txt  result_10142.txt  result_10166.txt  result_10169.txt  result_10242.thongbao.txt  result_10244.txt  result_10291.txt  result_10388.txt  result_10406.txt  result_10419.txt  result_10460.txt  result_10465.txt  result_10473.txt  result_10478.txt  result_10512.txt  result_10530.txt  result_10539.txt  result_10557.txt  result_10622.txt  result_10677.txt  result_10719.txt  result_10739.txt  result_10955.txt  result_10979.txt  result_11028.txt  result_11088.txt  result_11089.txt  result_11137.txt  result_11138.txt  result_11139.txt  result_11143.txt  result_11177.txt  result_11198.txt  (+4379 more)
Preprocessing/: __init__.py  data_prep.py  make_stopwords.py  stopwords.py  test.py  text_preprocessing.py  utils.py  wiki_parser.py
