[metadata]
name = Pre_Processing_VNI_Text
version = 0.0.2
author = Nguyen Minh Hieu
author_email = HieuNMHE150296@fpt.edu.vn
description = Processing data sets is Vietnamese, with input being text files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hieu150401/Preprocessing_VNItext.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
packages = find:
python_requires = >=3.7